# Home-Lab

./: .gitignore  README.md  cf-security.md  file-format.md  maintenance.md  watchyourlan_docker-compose.yml  z-pipeline-tbd.md  z-pipeline.md
13ft/: docker-compose.yml  readme.md
AppFlowy/: deploy.env  docker-compose.yml  readme.md
adguardhome/: docker-compose.traefik.yml  readme.md
adventurelog/: README.md  adventurelog_docker-compose.yml  docker-compose.yml  readme.md
affine/: README.md  docker-compose.yml  readme.md
airtrail/: airtrail_docker-compose.yml  readme.md
alexandrie/: readme.md
amule/: README.md  docker-compose.yml
anonupload/: docker-compose.yml  readme.md
archivebox/: docker-compose.yml  readme.md
astropod/: readme.md
authelia/: readme.md
authelia-admin/: readme.md
baserow/: docker-compose.yml  readme.md
bcms/: readme.md
bentopdf/: readme.md  z-tech.md
beszel/: README.md  docker-compose.yml  readme.md
botpress/: docker-compose.yaml  readme.md
bunkerm/: docker-compose.yml  readme.md
cal/: readme.md
calibre/: readme.md
caprover/: readme.md
casa-os/: docker-compose.yml  readme.md
castopod/: docker-compose.yml  readme.md
chartbrew/: readme.md
chartdb/: docker-compose.yaml  readme.md
chatwoot/: readme.md
gitea/user-creator-fastapi/: .env.sample  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md
gitea/user-creator-fastapi/app/: main.py  requirements.txt
gitea/user-creator-fastapi/scripts/: build-and-dev.sh  gitea-verify-and-test.sh  readme.md
gitea/user-creator-fastapi/static/: index.html
(+592 files in other folders)
